--- a/newsletter.html
+++ b/newsletter.html
@@ -29,7 +29,8 @@
     <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- Plugin-CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/themify-icons.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -46,7 +47,7 @@
     <![endif]-->
 </head>
 
-<body data-spy="scroll" data-target="#primary-menu" >
+<body  data-spy="scroll" data-target="#primary-menu">
 
 <div class="preloader">
     <div class="sk-folding-cube">
@@ -62,16 +63,31 @@
             <img src="images/logos/homeicon.png" class="d-inline-block signuphome" style="max-height:50px">
         </a>
     </div>
-
+    <img src="images/website-decor/diver.svg" class="diver px-5 absolute mobile-unfriendly" style="left: 4vw;">
     <div class="container" style="height: 1500px; padding-top: 5vh">
         <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shr61FjcsorqHvqtl?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" style="background: transparent;"></iframe>
     </div>
+    <footer class="footer-area relative" id="contact-page">
+        <div class="absolute footer-bg"></div>
+        <img src="images/website-decor/angler.svg" class="mobile-unfriendly" id="angler">
+        <div class="full-height footer-txt">
+            <div class="container text-center">
+                <img src="images/logos/vhhacksclear.png" style="width: 200px">
+            </div>
+        </div>
+    </footer>
 </div>
 
 
+
 <!--Vendor-JS-->
-<script src="js/vendor/jquery-1.12.4.min.js"></script>
-<script src="js/vendor/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+        integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
+        crossorigin="anonymous"></script>
 <!--Plugin-JS-->
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/contact-form.js"></script>
