Fix banner issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="px-3 py-3 fixed-top collapse show" id="collapseCovidWarning"
+<div class="px-3 py-3 fixed-top collapse show mobile-unfriendly" id="collapseCovidWarning"
      style="background-color: coral; color: white; height: 7vh">
     <div class="row">
         <div class="col-sm-auto">
