--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
     <div class="text-center"
          style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1">
         <img src="images/logos/vhhacksclear.png" style=" height: 33vh;">
-        <h1 style="color: white; font-size: 8vh">vhHacks 2020</h1>
+        <h1 style="color: white; font-size: 8vh">vhHacks 2021</h1>
         <h1 style="color: white">University of British Columbia</h1>
         <br>
-        <a id="main-button" href="covid19.html" class="button-white">Read our COVID-19 Statement</a>
+            <a id="main-button" href="apply.html" class="button-white">Apply to be on the vhHacks Team</a>
+        </div>
     </div>
     <div style="position: absolute; bottom:-1vh; left: 0; z-index: 0">
         <img src="images/skylines/astro/astro-waves.svg" style="width: 99vw; z-index: -1">
