Serve restyler on https

--- a/apply.html
+++ b/apply.html
@@ -67,7 +67,7 @@
         <div class="text-center py-5">
             <a href="https://forms.gle/DjfrADjYh7rEjd3J7" class="button-white">Not looking right? Click to the Mobile Version</a>
         </div>
-        <script src="http://googleformrestyler.apixml.net/GoogleFormStyler.js"
+        <script src="https://googleformrestyler.apixml.net/GoogleFormStyler.js"
                 form="https://docs.google.com/forms/d/e/1FAIpQLScDchFeaylQkTSpcw5eDQOdrRmDr0XHLLqN_nh7u3ii9WknCQ/viewform?embedded=true">
         </script>
 
