Fix mobile issues

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <img src="images/skylines/astro/astro-waves.svg" style="width: 99vw; z-index: -1">
     </div>
 </div>
-<div style="background: linear-gradient(to bottom, #1582BD, black);">
+<div style="background: linear-gradient(to bottom, #1582BD, black); overflow: hidden">
     <br><br><br>
     <div class="container">
         <div class="row">
@@ -80,7 +80,7 @@
                     hours. No experience? No problem! vhHacks is beginner friendly, so
                     anyone can join to learn, build, and hack.</p>
             </div>
-            <div class="col">
+            <div class="col mobile-unfriendly">
                 <img src="images/logos/vhhacksintro.svg" style="height: 30vh; position: absolute; top: -50px; right: 0">
             </div>
         </div>
