--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         <h1 style="color: white; font-size: 8vh">vhHacks 2021</h1>
         <h1 style="color: white">University of British Columbia</h1>
         <br>
-            <a id="main-button" href="apply.html" class="button-white">Apply to be on the vhHacks Team</a>
+        <a href="register.html" class="button-white">Register for Learn Day 1</a>
+        <br>
+        <a id="main-button" href="apply.html" class="button-white mt-3">Apply to be on the vhHacks Team</a>
         </div>
     </div>
     <div style="position: absolute; bottom:-1vh; left: 0; z-index: 0">
