Swap landing buttons

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
         <h1 style="color: white; font-size: 8vh">vhHacks 2021</h1>
         <h1 style="color: white">University of British Columbia</h1>
         <br>
-        <a href="register.html" class="button-white">Register for Learn Day 1</a>
-        <br>
-        <a id="main-button" href="apply.html" class="button-white mt-3">Apply to be on the vhHacks Team</a>
+                <a id="main-button" href="register.html" class="button-white mt-3">Register for Learn Day 1</a>
+
+        <br>        <br>
+        <a href="apply.html" class="button-blue" style="font-size: small">Apply to be on the vhHacks Team</a>
         </div>
     </div>
     <div style="position: absolute; bottom:-1vh; left: 0; z-index: 0">
