Correct automatic mobile redirect

--- a/register.html
+++ b/register.html
@@ -107,7 +107,7 @@
 <script>
     $(document).ready(function(){
         if($(window).width() < 800){
-            window.location.href = "https://forms.gle/h9K7BRuJ8okZ6tKT8";
+            window.location.href = "https://forms.gle/evbB7PfggC1w41VT6";
         }
     })
 </script>
