Add schedule to homepage

--- a/index.html
+++ b/index.html
@@ -143,6 +143,63 @@
             </div>
         </div>
     </section>
+    
+    <section style="padding-top: 10vh; padding-bottom: 10vh">
+        <div class="container">
+            <div class="row  justify-content-center">
+                <div class="col text-center">
+                    <div class="page-title">
+                        <h1>Learn Day 2020 Schedule</h1>
+                        <p style="font-size: 20px">10:00AM - 5:00PM PST</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center" style="padding-top: 20px">
+                <div class="col-lg-3">
+                    <img src="images/hacker-paths/game-v1.svg" alt="" style="height:180px">
+                </div>
+                <div class="col-lg-5">
+                    <div class="page-title">
+                        <h2>PyGame</h2>
+                        <p style="font-size:20px">10:00AM - 11:45AM</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center" style="padding-top: 20px">
+                <div class="col-lg-3">
+                    <p></p>
+                </div>
+                <div class="col-lg-5">
+                    <div class="page-title">
+                        <h2>Lunch</h2>
+                        <p style="font-size:20px">12:00PM - 1:00PM</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center" style="padding-top: 20px">
+                <div class="col-lg-3">
+                    <img src="images/hacker-paths/frontend-v1.svg" alt="" style="height:180px">
+                </div>
+                <div class="col-lg-5">
+                    <div class="page-title">
+                        <h2>p5.js</h2>
+                        <p style="font-size:20px">1:00PM - 2:45PM</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center" style="padding-top: 20px">
+                <div class="col-lg-3">
+                    <img src="images/hacker-paths/backend.svg" alt="" style="height:180px">
+                </div>
+                <div class="col-lg-5">
+                    <div class="page-title">
+                        <h2>Python Flask</h2>
+                        <p style="font-size:20px">3:00PM - 4:45PM</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="faq-page" style="padding-top: 10vh; padding-bottom: 10vh">
         <div class="container">
