--- a/discord.html
+++ b/discord.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <meta charset="utf8">
+    <meta http-equiv="refresh" content="0; url="discord.gg/kcAkxdX/">
+    <link rel="canonical" href="discord.gg/kcAkxdX/">
     <title>vhHacks Discord</title>
 </head>
 <body>
-   <iframe src="https://discordapp.com/widget?id=459857383817216000&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></body>
+    <p>Redirecting you to <a href="discord.gg/kcAkxdX/">the vhHacks Discord</a>&hellip;</p>
+</body>
 </html>
