Fix double iframe

--- a/discord.html
+++ b/discord.html
@@ -5,6 +5,6 @@
 <title>vhHacks Discord</title>
 </head>
 <body>
-<iframe src="https://discordapp.com/widget?id=459857383817216000&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>	   <iframe src="https://discordapp.com/widget?id=459857383817216000&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></body>
+<iframe src="https://discordapp.com/widget?id=459857383817216000&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>	
 </html>
