--- a/discord.html
+++ b/discord.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf8">
-<title>vhHacks Discord</title>
+    <meta charset="utf8">
+    <link rel="shortcut icon" type="image/x-icon" href="images/logos/logo-icon.png"/>
+    <title>vhHacks Discord</title>
 </head>
+
 <body>
-<iframe src="https://discordapp.com/widget?id=459857383817216000&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    <script>document.location = "https://discord.gg/kcAkxdX";</script>
 </body>	
 </html>
