--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                 <a id="main-button" href="register.html" class="button-white mt-3">Register for Learn Day 1</a>
 
         <br>        <br>
-        <a href="apply.html" class="button-blue" style="font-size: small">Apply to be on the vhHacks Team</a>
-        </div>
+    <a href="newsletter.html" class="button-blue" style="font-size: small">Sign up for our newsletter</a>
     </div>
     <div style="position: absolute; bottom:-1vh; left: 0; z-index: 0">
         <img src="images/skylines/astro/astro-waves.svg" style="width: 99vw; z-index: -1">
@@ -96,8 +95,7 @@
                     <div class="page-title">
                         <h1>Pick a path!</h1>
                         <p style="font-size: 20px">vhHacks is all about learning! If you haven't attended a hackathon before, pick a path
-                            below
-                            and dive into the world of hacking! More info to come!</p>
+                            below and dive into the world of hacking! More info to come!</p>
                     </div>
                 </div>
             </div>
@@ -138,63 +136,6 @@
                         </div>
                         <h4>Hardware hacker</h4>
                         <p>Use hardware to solve modern problems.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    
-    <section style="padding-top: 10vh; padding-bottom: 10vh">
-        <div class="container">
-            <div class="row  justify-content-center">
-                <div class="col text-center">
-                    <div class="page-title">
-                        <h1>Learn Day 2020 Schedule</h1>
-                        <p style="font-size: 20px">10:00AM - 5:00PM PST</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center align-items-center" style="padding-top: 40px">
-                <div class="col-lg-3">
-                    <img src="images/hacker-paths/game-v1.svg" alt="" style="height:180px">
-                </div>
-                <div class="col-lg-5">
-                    <div class="page-title">
-                        <h2>PyGame</h2>
-                        <p style="font-size:20px">10:00AM - 11:45AM</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center align-items-center" style="padding-top: 40px">
-                <div class="col-lg-3">
-                    <p></p>
-                </div>
-                <div class="col-lg-5">
-                    <div class="page-title">
-                        <h2>Lunch</h2>
-                        <p style="font-size:20px">12:00PM - 1:00PM</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center align-items-center" style="padding-top: 40px">
-                <div class="col-lg-3">
-                    <img src="images/hacker-paths/frontend-v1.svg" alt="" style="height:180px">
-                </div>
-                <div class="col-lg-5">
-                    <div class="page-title">
-                        <h2>p5.js</h2>
-                        <p style="font-size:20px">1:00PM - 2:45PM</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center align-items-center" style="padding-top: 24px">
-                <div class="col-lg-3">
-                    <img src="images/hacker-paths/backend.svg" alt="" style="height:180px">
-                </div>
-                <div class="col-lg-5">
-                    <div class="page-title">
-                        <h2>Python Flask</h2>
-                        <p style="font-size:20px">3:00PM - 4:45PM</p>
                     </div>
                 </div>
             </div>
