Update learn day to learn month

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 style="color: white; font-size: 8vh">vhHacks 2021</h1>
         <h1 style="color: white">University of British Columbia</h1>
         <br>
-                <a id="main-button" href="register.html" class="button-white mt-3">Register for Learn Day 1</a>
+                <a id="main-button" href="register.html" class="button-white mt-3">Register for Learn Month</a>
 
         <br>        <br>
     <a href="newsletter.html" class="button-blue" style="font-size: small">Sign up for our newsletter</a>
