Clean up FAQ, clean up signup and mentorship applicatino forms

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
          style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1">
         <img src="images/logos/vhhacksclear.png" style=" height: 33vh;">
         <h1 style="color: white; font-size: 8vh">vhHacks 2021</h1>
-        <h1 style="color: white">University of British Columbia</h1>
+        <!--<h1 style="color: white">University of British Columbia</h1>-->
         <br>
-                <a id="main-button" href="register.html" class="button-white mt-3">Register for Learn Month</a>
+                <a id="main-button" href="https://vhhacks-2021.devpost.com/" class="button-white mt-3">Register now!</a>
 
         <br>        <br>
-    <a href="newsletter.html" class="button-blue" style="font-size: small">Sign up for our newsletter</a>
+    <a href="https://forms.gle/5ffUCdbXfWjDu9KC6" class="button-blue" style="font-size: small">Apply to be a mentor/judge</a>
     </div>
     <div style="position: absolute; bottom:-1vh; left: 0; z-index: 0">
         <img src="images/skylines/astro/astro-waves.svg" style="width: 99vw; z-index: -1">
@@ -60,7 +60,7 @@
                 <h1>What is vhHacks?</h1>
                 <p>vhHacks is Greater Vancouver's first free hackathon dedicated to
                     high school students. More than one hundred students
-                    will gather and collaborate to build and showcase a project in under 24
+                    will gather and collaborate to build and showcase a project in 48
                     hours. No experience? No problem! vhHacks is beginner friendly, so
                     anyone can join to learn, build, and hack.</p>
             </div>
@@ -147,7 +147,7 @@
                     <div id="collapse1" class="panel-collapse collapse in">
                         <p>A hackathon is an invention marathon. Students come together in teams to build
                             cool
-                            software and hardware projects over the course of 24 hours.</p>
+                            software and hardware projects over the course of 48 hours.</p>
                     </div>
                 </div>
                 <div class="panel">
@@ -174,28 +174,10 @@
                         </h4>
                     </div>
                     <div id="collapse3" class="panel-collapse collapse">
-                        <p>Nothing! vhHacks is completely free of charge at the event. However, if you are
-                            booking a stay near the event, or taking public transport, those will cost
-                            money.</p>
+                        <p>Nothing! vhHacks is completely free of charge.</p>
                     </div>
                 </div>
 
-                <div class="panel">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><span></span>Will there
-                                be
-                                food?</a>
-                        </h4>
-                    </div>
-                    <div id="collapse4" class="panel-collapse collapse">
-                        <p>Yes. Food and snacks are provided throughout the event, even overnight! (We know
-                            you
-                            night owls get the munchies.) There are also restaurants around the venue to buy
-                            food
-                            and snacks, and you can always bring your own!</p>
-                    </div>
-                </div>
                 <div class="panel">
                     <div class="panel-heading">
                         <h4 class="panel-title">
@@ -213,6 +195,23 @@
                             you're the right fit for vhHacks. Artists, musicians, athletes, gamers, everyone
                             is
                             welcome!</p>
+                    </div>
+                </div>
+                <!--
+                <div class="panel">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><span></span>Will there
+                                be
+                                food?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse4" class="panel-collapse collapse">
+                        <p>Yes. Food and snacks are provided throughout the event, even overnight! (We know
+                            you
+                            night owls get the munchies.) There are also restaurants around the venue to buy
+                            food
+                            and snacks, and you can always bring your own!</p>
                     </div>
                 </div>
                 <div class="panel">
@@ -250,6 +249,25 @@
                         </p>
                     </div>
                 </div>
+
+    
+                <h2 style="padding-top:30px;">At the Event</h2>
+                <div class="panel">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse9"><span></span>What
+                                should I
+                                bring?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse9" class="panel-collapse collapse">
+                        <p>
+                            Since vhHacks is a 24 hour event, prepare to stay overnight! Food will be
+                            provided--more info to come.
+                        </p>
+                    </div>
+                </div>
+                -->
                 <h2 style="padding-top:30px;">Teams</h2>
                 <div class="panel">
                     <div class="panel-heading">
@@ -285,22 +303,7 @@
                         </p>
                     </div>
                 </div>
-                <h2 style="padding-top:30px;">At the Event</h2>
-                <div class="panel">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse9"><span></span>What
-                                should I
-                                bring?</a>
-                        </h4>
-                    </div>
-                    <div id="collapse9" class="panel-collapse collapse">
-                        <p>
-                            Since vhHacks is a 24 hour event, prepare to stay overnight! Food will be
-                            provided--more info to come.
-                        </p>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
