Update FAQ with discord and devpost links in location

--- a/index.html
+++ b/index.html
@@ -197,6 +197,20 @@
                             welcome!</p>
                     </div>
                 </div>
+                <div class="panel">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse6"><span></span>Where is
+                                the
+                                event?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse6" class="panel-collapse collapse">
+                        <p>vhHacks 2021 will be taking place online on Devpost and Discord. You can find a link to the Devpost <a href="https://vhhacks-2021.devpost.com/">here</a> an invite to the Discord server <a
+                                    href="vhhacks.ca/discord">here.</a>
+                        </p>
+                    </div>
+                </div>
                 <!--
                 <div class="panel">
                     <div class="panel-heading">
@@ -214,22 +228,7 @@
                             and snacks, and you can always bring your own!</p>
                     </div>
                 </div>
-                <div class="panel">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse6"><span></span>Where is
-                                the
-                                event?</a>
-                        </h4>
-                    </div>
-                    <div id="collapse6" class="panel-collapse collapse">
-                        <p>vhHacks will be taking place in the AMS Great Hall. You can find
-                            details about the room <a href="https://www.ams.ubc.ca/the-nest/">here</a> and
-                            directions to the venue <a
-                                    href="https://www.google.ca/maps/dir//AMS+Student+Nest,+University+Boulevard,+Vancouver,+BC/@49.2665688,-123.3199038,12z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x54867398c216945b:0xe9bbdd7328c09b21!2m2!1d-123.2498647!2d49.2664779!3e3">here.</a>
-                        </p>
-                    </div>
-                </div>
+                
                 <div class="panel">
                     <div class="panel-heading">
                         <h4 class="panel-title">
