--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
          style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1">
         <img src="images/logos/vhhacksclear.png" style=" height: 33vh;">
         <h1 style="color: white; font-size: 8vh">vhHacks 2021</h1>
+        <p style="color: white;">March 27-28</p>
         <!--<h1 style="color: white">University of British Columbia</h1>-->
         <br>
                 <a id="main-button" href="https://vhhacks-2021.devpost.com/" class="button-white mt-3">Register now!</a>
