--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
          style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1">
         <img src="images/logos/vhhacksclear.png" style=" height: 33vh;">
         <h1 style="color: white; font-size: 8vh">vhHacks 2021</h1>
-        <p style="color: white;">March 26-28</p>
+        <p style="color: white;">March 26-28, 2021</p>
         <!--<h1 style="color: white">University of British Columbia</h1>-->
         <br>
-                <a id="main-button" href="https://vhhacks-2021.devpost.com/" class="button-white mt-3">Register now!</a>
+                <a id="main-button" href="https://vhhacks-2021.devpost.com/" class="button-white mt-3">View Projects!</a>
 
         <br>        <br>
-    <a href="https://forms.gle/5ffUCdbXfWjDu9KC6" class="button-blue" style="font-size: small">Apply to be a mentor/judge</a>
+    <!-- <a href="https://forms.gle/5ffUCdbXfWjDu9KC6" class="button-blue" style="font-size: small">Apply to be a mentor/judge</a> -->
     </div>
     <div style="position: absolute; bottom:-1vh; left: 0; z-index: 0">
         <img src="images/skylines/astro/astro-waves.svg" style="width: 99vw; z-index: -1">
